Changed name and made it ready to run

--- a/Packed Padded 2 Layer Seq-Seq.ipynb
+++ b/Packed Padded 2 Layer Seq-Seq.ipynb
@@ -261,7 +261,7 @@
     "        \n",
     "        self.embedding = nn.Embedding(input_dim, emb_dim)\n",
     "        \n",
-    "        self.rnn = nn.GRU(emb_dim, enc_hid_dim, num_layers=2, bidirectional = True, dropout=0.3)\n",
+    "        self.rnn = nn.GRU(emb_dim, enc_hid_dim, num_layers=2, bidirectional = True, dropout=0.5)\n",
     "        \n",
     "        self.fc = nn.Linear(enc_hid_dim * 2, dec_hid_dim)\n",
     "        \n",
@@ -401,7 +401,7 @@
     "        \n",
     "        self.embedding = nn.Embedding(output_dim, emb_dim)\n",
     "        \n",
-    "        self.rnn = nn.GRU((enc_hid_dim * 2) + emb_dim, dec_hid_dim, num_layers=2, dropout=0.3)\n",
+    "        self.rnn = nn.GRU((enc_hid_dim * 2) + emb_dim, dec_hid_dim, num_layers=2, dropout=0.5)\n",
     "        \n",
     "        self.out = nn.Linear((enc_hid_dim * 2) + dec_hid_dim + emb_dim, output_dim)\n",
     "        \n",
@@ -751,7 +751,7 @@
     }
    ],
    "source": [
-    "N_EPOCHS = 20\n",
+    "N_EPOCHS = 35\n",
     "CLIP = 1\n",
     "\n",
     "INPUT_DIM = len(german['idx2word'])\n",
@@ -760,8 +760,8 @@
     "DEC_EMB_DIM = 256\n",
     "ENC_HID_DIM = 512\n",
     "DEC_HID_DIM = 512\n",
-    "ENC_DROPOUT = 0.4\n",
-    "DEC_DROPOUT = 0.4\n",
+    "ENC_DROPOUT = 0.5\n",
+    "DEC_DROPOUT = 0.5\n",
     "PAD_IDX = 0\n",
     "SOS_IDX = 2\n",
     "EOS_IDX = 3\n",
@@ -771,16 +771,22 @@
     "dec = Decoder(OUTPUT_DIM, DEC_EMB_DIM, ENC_HID_DIM, DEC_HID_DIM, DEC_DROPOUT, attn)\n",
     "\n",
     "model = Seq2Seq(enc, dec, PAD_IDX, SOS_IDX, EOS_IDX, device).to(device)\n",
+    "criterion = nn.CrossEntropyLoss(ignore_index = PAD_IDX)\n",
     "\n",
     "print(f'The model has {count_parameters(model):,} trainable parameters')\n",
     "\n",
+    "############## COMMENT OUT BELOW IF YOU ARE LOADING A MODEL ####################\n",
     "model.apply(init_weights)\n",
-    "\n",
-    "criterion = nn.CrossEntropyLoss(ignore_index = PAD_IDX)\n",
     "optimizer = optim.Adam(model.parameters())\n",
+    "last_epoch=1\n",
+    "##############################################################################\n",
     "\n",
-    "best_valid_loss = float('inf')\n",
-    "bad_epoch_cnt = 0\n",
+    "############## UNCOMMENT BELOW IF YOU ARE LOADING A MODEL ####################\n",
+    "# checkpoint = torch.load(\"%%%%FILE NAME%%%%\")\n",
+    "# model.load_state_dict(checkpoint['state_dict'])\n",
+    "# optimizer.load_state_dict(checkpoint['optimizer'])\n",
+    "# last_epoch = checkpoint['epoch']\n",
+    "##############################################################################\n",
     "\n",
     "results = {\"hyperparams\": (ENC_EMB_DIM, DEC_HID_DIM),\n",
     "           \"train_loss\": [],\n",
@@ -790,13 +796,13 @@
     "\n",
     "valid_batches = bake_batches(german['dev'], english['dev'], batch_size=2400, max_len=max_len_valid)\n",
     "\n",
-    "for epoch in range(N_EPOCHS):\n",
+    "for epoch in range(last_epoch, N_EPOCHS):\n",
     "    random.shuffle(training_data)\n",
     "\n",
     "    de_shuffled_td = [td[0] for td in training_data]\n",
     "    en_shuffled_td = [td[1] for td in training_data]\n",
     "\n",
-    "    print(\"Baking batches...\")\n",
+    "    print(\"Baking batches...\", end= \" \")\n",
     "    train_batches = bake_batches(de_shuffled_td, en_shuffled_td, batch_size=2800, max_len=max_len_train)\n",
     "    print(\"Done.\")\n",
     "    \n",
@@ -808,30 +814,25 @@
     "    end_time = time.time()\n",
     "\n",
     "    epoch_mins, epoch_secs = epoch_time(start_time, end_time)\n",
-    "    if train_loss < best_train_loss:\n",
-    "        torch.save(model.state_dict(), 'best-model-train.pt')\n",
-    "\n",
-    "\n",
-    "    if valid_loss < best_valid_loss:\n",
-    "        best_valid_loss = valid_loss\n",
-    "        bad_epoch_cnt = 0\n",
-    "        torch.save(model.state_dict(), 'best-model-val.pt')\n",
-    "    else:\n",
-    "        bad_epoch_cnt += 1  \n",
-    "        \n",
-    "    print(\"Validation loss has not improved in\", bad_epoch_cnt, \"epochs\")        \n",
+    "    \n",
     "    print(f'Epoch: {epoch+1:02} | Time: {epoch_mins}m {epoch_secs}s')\n",
     "    print(f'\\tTrain Loss: {train_loss:.3f} | Train PPL: {math.exp(train_loss):7.3f}')\n",
     "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. PPL: {math.exp(valid_loss):7.3f}')\n",
+    "    \n",
+    "    # Save the last epoch over the checkpoint\n",
+    "    checkpoint = {}\n",
+    "    checkpoint['state_dict'] = model.state_dict()\n",
+    "    checkpoint['optimizer'] = optimizer.state_dict()\n",
+    "    checkpoint['epoch'] = epoch\n",
+    "    file_name = 'checkpoint_{0}.pth'.format(epoch)        \n",
+    "    torch.save(checkpoint, file_name)\n",
+    "    write_to_drive(file_name)\n",
     "    \n",
     "    results['train_loss'].append(train_loss)\n",
     "    results['valid_loss'].append(valid_loss)\n",
     "    results['train_ppl'].append(math.exp(train_loss))\n",
     "    results['valid_ppl'].append(math.exp(valid_loss))\n",
-    "    \n",
-    "    if bad_epoch_cnt >= 5:\n",
-    "        print(\"Early Stopping\")\n",
-    "        break"
+    "    "
    ]
   },
   {
@@ -844,58 +845,47 @@
    },
    "outputs": [],
    "source": [
-    "def sample_net(net, batches):    \n",
+    "target_file = drive.CreateFile({'id': '115tf274P47ZyBj1EdfeOpPWIK6hDwCnl'})\n",
+    "target_file.GetContentFile('./target.out') \n",
+    "    \n",
+    "source_file = drive.CreateFile({'id': '1gAvrzv6I6Y6Qr2j1Oah4lz4eIgHdiVW7'})\n",
+    "source_file.GetContentFile('./source.out') \n",
+    "    \n",
+    "def sample_net(net, test_de):    \n",
     "    preds = []\n",
-    "    targets = []\n",
-    "    sources = []\n",
-    "    sampled_batches = {}\n",
     "    \n",
-    "       \n",
     "    with torch.no_grad():\n",
-    "        for i, batch in enumerate(batches):\n",
-    "            src = batch['source']\n",
-    "            src_len = batch['srclen']\n",
-    "            trg = batch['target']\n",
-    "\n",
-    "            output, _ = net(src, src_len, trg, 0)\n",
-    "            \n",
-    "#             print(\"L length x N sentences:\", target.shape)\n",
-    "#             print(type(output))\n",
-    "#             print(\"L length x N sentences x V vocabulary:\", pred.shape)\n",
-    "            pred = torch.argmax(output, dim=2)\n",
-    "            \n",
-    "#             print(\"L length x N sentences:\", pred.shape)\n",
-    "#             print(\"L length x N sentences:\", target.shape)\n",
-    "            \n",
+    "        for i, sent in enumerate(test_de):\n",
+    "            src = torch.LongTensor(sent).unsqueeze(1).to(device) \n",
+    "            src_len = torch.LongTensor([len(sent)])\n",
+    "    \n",
+    "            output, _ = net(src, src_len, None, 0)\n",
+    " \n",
+    "            pred = torch.argmax(output, dim=2)            \n",
     "            preds.append(pred)\n",
-    "            targets.append(trg)\n",
-    "            sources.append(src)\n",
-    "    \n",
-    "    sampled_batches['source'] = sources\n",
-    "    sampled_batches['target'] = targets\n",
-    "    sampled_batches['prediction'] = preds\n",
-    "    \n",
-    "    return sampled_batches\n",
-    "# CLIP = 1\n",
     "\n",
+    "    return preds\n",
+    "   \n",
     "# INPUT_DIM = len(german['idx2word'])\n",
     "# OUTPUT_DIM = len(english['idx2word'])\n",
-    "# ENC_DROPOUT = 0.5\n",
-    "# DEC_DROPOUT = 0.5\n",
     "# ENC_EMB_DIM = 256\n",
     "# DEC_EMB_DIM = 256\n",
     "# ENC_HID_DIM = 512\n",
     "# DEC_HID_DIM = 512\n",
+    "# ENC_DROPOUT = 0.3\n",
+    "# DEC_DROPOUT = 0.3\n",
+    "# PAD_IDX = 0\n",
+    "# SOS_IDX = 2\n",
+    "# EOS_IDX = 3\n",
     "\n",
     "# attn = Attention(ENC_HID_DIM, DEC_HID_DIM)\n",
     "# enc = Encoder(INPUT_DIM, ENC_EMB_DIM, ENC_HID_DIM, DEC_HID_DIM, ENC_DROPOUT)\n",
     "# dec = Decoder(OUTPUT_DIM, DEC_EMB_DIM, ENC_HID_DIM, DEC_HID_DIM, DEC_DROPOUT, attn)\n",
     "\n",
-    "# model = Seq2Seq(enc, dec, device).to(device)\n",
-    "# model.load_state_dict(torch.load(\"best-model.pt\"))\n",
+    "# model = Seq2Seq(enc, dec, PAD_IDX, SOS_IDX, EOS_IDX, device).to(device)\n",
+    "# model.load_state_dict(torch.load(\"packed-padded-a.pt\"))\n",
     "\n",
-    "batches = bake_batches(german['dev'], english['dev'])\n",
-    "sampled_batches = sample_net(model, batches)"
+    "predictions = sample_net(model, german['dev'])"
    ]
   },
   {
@@ -908,63 +898,24 @@
    },
    "outputs": [],
    "source": [
-    "def print_samples(batches):\n",
-    "    # Each of the inputs should be a tensor batch of shape L x N\n",
-    "    # print(sources.shape)\n",
-    "    source = batches['source']\n",
-    "    target = batches['target']\n",
-    "    prediction = batches['prediction']\n",
+    "def print_samples(predictions):\n",
+    "    preds_tokenized = []  \n",
     "    \n",
-    "    sources_tokenized = []\n",
-    "    targets_tokenized = []\n",
-    "    preds_tokenized = []\n",
+    "    for pred in predictions:\n",
+    "        pred_sent = []\n",
+    "        w=1\n",
+    "        while w < len(pred) and pred[w].item() != 3:\n",
+    "            idx = pred[w].item()\n",
+    "            pred_sent.append(english['idx2word'][idx])\n",
+    "            w+=1\n",
+    "        preds_tokenized.append(pred_sent)\n",
     "    \n",
-    "#     md_de = MosesDetokenizer(lang='en')\n",
-    "#     md_en = MosesDetokenizer(lang='en')\n",
-    "\n",
-    "\n",
-    "    for b in range(len(batches['source'])):\n",
-    "        for sent in range(source[b].shape[1]):\n",
-    "            w = 1\n",
-    "            src_sent = []\n",
-    "            while w < target[b][:,sent].shape[0] and target[b][w,sent].item()!=3:\n",
-    "                idx = target[b][w,sent].item()\n",
-    "                src_sent.append(german['idx2word'][idx])\n",
-    "                w+=1\n",
-    "            sources_tokenized.append(src_sent)\n",
-    "            \n",
-    "            w = 1\n",
-    "            tgt_sent = []\n",
-    "            while w < target[b][:,sent].shape[0] and target[b][w,sent].item()!=3:\n",
-    "                idx = target[b][w,sent].item()\n",
-    "                tgt_sent.append(english['idx2word'][idx])\n",
-    "                w+=1\n",
-    "            targets_tokenized.append(tgt_sent)\n",
-    "\n",
-    "            w = 1\n",
-    "            pred_sent = []\n",
-    "            while w < prediction[b][:,sent].shape[0] and prediction[b][w,sent].item()!=3:\n",
-    "                idx = prediction[b][w,sent].item()\n",
-    "                pred_sent.append(english['idx2word'][idx])\n",
-    "                w+=1\n",
-    "            preds_tokenized.append(pred_sent)\n",
-    "    \n",
-    "    with open('source.out', 'w') as f:\n",
-    "        for sent in sources_tokenized:\n",
-    "            x = \" \".join(sent)\n",
-    "            f.write(x + '\\n')\n",
-    "    \n",
-    "    with open('target.out', 'w') as f:\n",
-    "        for sent in targets_tokenized:\n",
-    "            x = \" \".join(sent)\n",
-    "            f.write(x + '\\n')\n",
-    "            \n",
     "    with open('pred.out', 'w') as f:\n",
     "        for sent in preds_tokenized:\n",
     "            y = \" \".join(sent)\n",
     "            f.write(y + '\\n')\n",
     "            \n",
-    "print_samples(sampled_batches)"
+    "print_samples(predictions)"
    ]
   },
   {
@@ -977,9 +928,7 @@
    },
    "outputs": [],
    "source": [
-    "!sed -r -i 's/(@@ )|(@@ ?$)//g' pred.out\n",
-    "!sed -r -i 's/(@@ )|(@@ ?$)//g' source.out\n",
-    "!sed -r -i 's/(@@ )|(@@ ?$)//g' target.out"
+    "!sed -r -i 's/(@@ )|(@@ ?$)//g' pred.out"
    ]
   },
   {
@@ -1210,7 +1159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
