Include Google Drive saving

--- a/Packed Padded 2 Layer Seq-Seq.ipynb
+++ b/Packed Padded 2 Layer Seq-Seq.ipynb
@@ -728,6 +728,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_to_drive(filename):\n",
+    "    from googleapiclient.discovery import build\n",
+    "    drive_service = build('drive', 'v3')\n",
+    "\n",
+    "    from googleapiclient.http import MediaFileUpload\n",
+    "\n",
+    "    file_metadata = {\n",
+    "      'name': filename\n",
+    "    }\n",
+    "    media = MediaFileUpload(filename, \n",
+    "                            resumable=True)\n",
+    "    created = drive_service.files().create(body=file_metadata,\n",
+    "                                           media_body=media,\n",
+    "                                           fields='id').execute()\n",
+    "    print('File ID: {}'.format(created.get('id')))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "colab": {
